# AL

./: .env.sample  .gitignore  README.md  config.sample.yaml  display-config.yaml  hello.py  justfile  memory_monitor.py  pyproject.toml
.github/workflows/: build-image.yml
pi-setup/: README.md  custom.toml  firstrun.env.sample  firstrun.sh  install-to-boot.sh  pi-config.json  setup.sh
